--- a/src/block-slider/common.scss
+++ b/src/block-slider/common.scss
@@ -32,10 +32,19 @@
 	}
 }
 
+.wcb-slider__item-inner {
+	width: 100%;
+}
+
+.wcb-slider-child__wrap {
+	width: 100%;
+	margin: auto;
+}
+
 .wcb-slider__item {
-	// position: relative;
+	position: relative;
 	.wcb-slider__item-background {
-		// position: relative;
+		position: relative;
 	}
 	.wcb-slider__item-wrap-inner {
 		display: flex;
