add feature and fix bug

--- a/src/block-slider-child/style.scss
+++ b/src/block-slider-child/style.scss
@@ -47,3 +47,12 @@
     align-items: center;
     justify-content: center;
 }
+
+.wcb-slider-child__btn-text {
+	margin-left: 4px;
+}
+
+.wcb-slider-child__btn-inner__link {
+	display: flex;
+	align-items: center;
+}
