calc width slider for re-render DOM

--- a/src/block-slider/common.scss
+++ b/src/block-slider/common.scss
@@ -25,6 +25,10 @@
 			display: none;
 		}
 	}
+
+	.slick-track {
+		min-width: 0px;
+	}
 }
 
 .wcb-slider__item-inner {
@@ -62,11 +66,4 @@
 .wcb-slider__wrap-items {
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-}
-
-.slick-list {
-    display: flex;
-	justify-content: center;
-    align-items: center; /* Center items vertically */
-	height: unset !important;
 }
