--- a/src/block-container/style.scss
+++ b/src/block-container/style.scss
@@ -8,6 +8,24 @@ body .wcb-container__wrap {
 	}
 }
 
+@media (min-width: 1025px) {
+	body .wcb-hide-desktop {
+		display: none !important;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+	body .wcb-hide-tab {
+		display: none !important;
+	}
+}
+
+@media (max-width: 767px) {
+	body .wcb-hide-mob {
+		display: none !important;
+	}
+}
+
 /*  */
 .wcb-container__wrap {
 	position: relative;
