add style layout 3 add to cart

--- a/src/block-products/style.scss
+++ b/src/block-products/style.scss
@@ -319,6 +319,9 @@
 		text-align: center;
 		white-space: normal;
 		word-break: break-word;
+		color: white;
+		background-color: #1346af;
+		border-radius: 20px;
 	}
 }
 
