--- a/src/block-products/style.scss
+++ b/src/block-products/style.scss
@@ -320,7 +320,7 @@
 		white-space: normal;
 		word-break: break-word;
 		color: white;
-		background-color: #1346af;
+		// background-color: #1346af;
 		border-radius: 20px;
 	}
 }
