--- a/src/block-products/style.scss
+++ b/src/block-products/style.scss
@@ -79,6 +79,42 @@
 	animation: circle-loading 0.35s linear infinite;
 }
 
+.add_to_cart_button__insite-image--loading::before {
+	content: "" !important; 
+	z-index: 2; 
+	position: relative; 
+	border: 1px solid #ddd; 
+	border-top-color: #222; 
+	border-radius: 50%; 
+	height: 14px; 
+	width: 14px; 
+	top: 8px; 
+	left: calc( 50% ); 
+	transform: translateY(-50%) translateX(-50%); 
+	animation: circle-loading 0.35s linear infinite;
+}
+
+.add_to_cart_button__style-bottom-visible--loading {
+    position: relative;
+}
+
+.add_to_cart_button__style-bottom-visible--loading::before {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    border: 1px solid rgb(19, 70, 175);
+    border-top-color: #222;
+    border-radius: 50%;
+    height: 14px;
+    width: 14px;
+    top: -7px;
+    left: -14px;
+    transform: translate(-50%, -50%);
+    
+    animation: circle-loading 0.35s linear infinite;
+}
+
+
 .wcb-products__product {
 	font-size: 16px;
 	height: auto;
